Add html interface

--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title></title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
-  </head>
-  <body>
-  
-  </body>
+
+<head>
+  <title>Index</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="/css/style.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <div class="img-banner"></div>
+  <main>
+    <div class="content">
+      <h1>Cairo</h1>
+      <div class="forecast-details">
+        <h2>29°<span>C</span></h2>
+        <ul>
+          <li>Precipitation: 60%</li>
+          <li>Humidity: 88%</li>
+          <li>Wind: 6 km/h</li>
+        </ul>
+      </div>
+    </div>
+    <footer>
+      <p>Isolated thunderstorms</p>
+      <p>Friday, Sep 3, 2021</p>
+    </footer>
+  </main>
+
+
+  <!-- <footer> -->
+  <!--   <p>Made by <a href="https://github.com/dev-math">dev-math</a></p> -->
+  <!-- </footer> -->
+</body>
+
 </html>
